--- a/templateInput/mw-gen-030711-print/templateData/template.yaml
+++ b/templateInput/mw-gen-030711-print/templateData/template.yaml
@@ -1,7 +1,7 @@
 ---
 tabloidParent:
   type: div
-  className: a4parent
+  className: tabloidParent
   css:
     display: flex
     flexDirection: row
