"change phone number in hot link"

--- a/userInput/2024-mw/mw-202403-web/userData/data.yaml
+++ b/userInput/2024-mw/mw-202403-web/userData/data.yaml
@@ -33,27 +33,27 @@ a4parent:
         sectionLeft2:  
           leftSec2Header: FREE HOMESELLER'S MARKETING CHECKLIST
           leftSec2Text: This valuable checklist has helped hundreds of area home sellers make thousands of dollars more on their home sale. Now you too can maximize your home’s saleability with this Homeseller’s Marketing Checklist, which reveals 27 Valuable Tips to Sell Your Home Fast and for Top Dollar. We’ll send you your free Homeseller’s Marketing Checklist at no charge and without obligation.<br>To order any time, 24 hours a day, call
-          leftSec2Footer: <b>1‐844‐311‐5109 ID# 5023</b>       
+          leftSec2Footer: <a href='tel:1‐844‐311‐5109,,,5023'><b>1‐844‐311‐5109 ID# 5023</b></a>       
         section3:
           section3Left:
             leftSec3Header: 6 Costly Errors to Avoid When Moving to a Larger Home
             leftSec3Text: Free reports tell you how.
-            leftSec3Footer: Free recorded message 1‐844‐311‐5109 ID# 5007
+            leftSec3Footer: Free recorded message <a href='tel:1‐844‐311‐5109,,,5007'>1‐844‐311‐5109 ID# 5007</a>
           section3Right:
             leftSec3Header: 10 WAYS TO SAVE MONEY WHEN BUYING A NEW HOME
             leftSec3Text: Free Report reviews advantages that most builders may not reveal.
-            leftSec3Footer: Free recorded message <br>1‐844‐311‐5109 ID# 5010
+            leftSec3Footer: Free recorded message <br><a href='tel:1‐844‐311‐5109,,,5010'>1‐844‐311‐5109  ID# 5010</a>
       page1BodyRight:
         rightSec1:
           rightSec1Header1: HOMESELLERS
           rightSec1Header2: Find out what homes down the street sold for!
           rightSec1Text: Free hotlist w/pics of recent area home sales and current listings.
-          rightSec1Footer: Free recorded message <br>1‐844‐311‐5109 ID# 5041
+          rightSec1Footer: Free recorded message <br><a href='tel:1‐844‐311‐5109,,,5041'>1‐844‐311‐5109   ID# 5041</a>
         rightSec2:
           rightSec2Header: Beat Out Other Buyers to <span  style="color:#cd0f13;"><i><u>HOT</u></i></span> New Listings
           rightSec2Text: |
             <p>Why call a high-pressure sales agent who will just make you feel obligated when all you want is a <b>hassle-free way</b> to know about the price, location, or particulars of a home for sale. Well, you <u>don't have to talk to anyone because my system will search out ALL homes currently listed or sold anywhere in the area by all real estate companies.</u></p>
-            <p>All you need to do is access my FREE, 24-hour House Hunter service any time and leave your home-buying criteria, including price range and preferred area. We will send you a hotlist of all current homes that match your criteria, including address, price and full listing details.<b> This information is free and obligates you to nothing. It’s all part of my FREE House-Hunter Service which you can access, so call my toll-free House-Hunter hotline today at 1‐844‐311‐5109 & enter ID# 5041.</b></p>
+            <p>All you need to do is access my FREE, 24-hour House Hunter service any time and leave your home-buying criteria, including price range and preferred area. We will send you a hotlist of all current homes that match your criteria, including address, price and full listing details.<b> This information is free and obligates you to nothing. It’s all part of my FREE House-Hunter Service which you can access, so call my toll-free House-Hunter hotline today at <a href='tel:1‐844‐311‐5109,,,5041'>1‐844‐311‐5109 & enter ID# 5041</a>.</b></p>
     page1Footer:
       page1FooterText: "Consumer information provided courtesy of Praveen Kumar, CA BRE Lic#: 01928307"
       page1FooterImg: img/image4.png      
@@ -69,21 +69,21 @@ a4parent:
             <p>Through these 27 tips, you will discover how to protect and capitalize on your most important investment, reduce stress, be in control of your situation, and make the best profit possible.</p>
             <p>In this report, you’ll discover how to avoid financial disappointment or worse, a financial disaster when selling your home. Using a common-sense approach, you will get the straight facts about what can make or break the sale of your home.</p>
             <p>You owe it to yourself to learn how these important tips will give you the competitive edge to get your home sold fast and for the most amount of money.</p>
-            <p><b>Order your free report, today. To hear a brief recorded message about how to order your FREE copy of this report call toll-free 1‐844‐311‐5109 and enter 5023. You can call any time, 24 hours a day, 7 days a week.</b></p>
+            <p><b>Order your free report, today. To hear a brief recorded message about how to order your FREE copy of this report call toll-free <a href='tel:1‐844‐311‐5109,,,5023'>1‐844‐311‐5109 & enter ID# 5023</a>. You can call any time, 24 hours a day, 7 days a week.</b></p>
             <p>Get your free special report NOW.</p>
         pageBodyLeftBottom:
           leftBottomBox1:
             leftBottomBox1Header: How to Sell Your House Without an Agent
             leftBottomBox1Body: Free Report Reveals “10 Inside Tips” to selling your home by yourself.
-            leftBottomBox1Footer: Free recorded message 1‐844‐311‐5109 ID# 5017
+            leftBottomBox1Footer: Free recorded message <a href='tel:1‐844‐311‐5109,,,5017'>1‐844‐311‐5109 ID# 5017</a>
           leftBottomBox2:
             leftBottomBox2Header: Top Dollar For Your Home
             leftBottomBox2Body: Free Report Reveals How to Set Your Asking Price When Selling Your Home.
-            leftBottomBox2Footer: Free recorded message 1‐844‐311‐5109 ID# 5016
+            leftBottomBox2Footer: Free recorded message <a href='tel:1‐844‐311‐5109,,,5016'>1‐844‐311‐5109 ID# 5016</a>
       page2BodyRight: 
         rightSec1Header: DISTRESS SALE HOMES<br> in SF Bay Area<br> BANK FORECLOSURES
         rightSec1Text1: Free hotlist of foreclosure property listings w/pics.
-        rightSec1Text2: 'Free recorded message <br>1‐844‐311‐5109 ID # 5042'
+        rightSec1Text2: Free recorded message <br><a href='tel:1‐844‐311‐5109,,,5042'>1‐844‐311‐5109 ID# 5042</a>
         rightSec2:
           rightSec2Header: INFORMATION CORNER
           rightSec2Text: Valuable FREE reports for Buyers and Sellers sent to you<br> at no cost or obligation. Call anytime 24 hours a day to<br><b>1‐844‐311‐5109 and enter the ID#</b><br>of the information that you would like to receive.
