--- a/userInput/hb-2024-web/userData/data.yaml
+++ b/userInput/hb-2024-web/userData/data.yaml
@@ -57,7 +57,9 @@ a4parent:
         page2BodyRightFooter: Continued in next page.
     page2Footer: We rise, by lifting others. - Robert Ingersoll
   page3:
-    
+    page3Header:
+      
+
 
 
 
