--- a/userInput/2024-mw/mw-202403-web/userData/data.yaml
+++ b/userInput/2024-mw/mw-202403-web/userData/data.yaml
@@ -86,36 +86,36 @@ a4parent:
         rightSec1Text2: Free recorded message <br><a href='tel:844‐311‐5109,,,5042'>✆ 844‐311‐5109 ID# 5042</a>
         rightSec2:
           rightSec2Header: INFORMATION CORNER
-          rightSec2Text: Valuable FREE reports for Buyers and Sellers sent to you<br> at no cost or obligation. Call anytime 24 hours a day to<br><a href="1‐844‐311‐5109"><b>✆ 1‐844‐311‐5109 </a>and enter the ID#</b><br>of the information that you would like to receive.
+          rightSec2Text: Valuable FREE reports for Buyers and Sellers sent to you<br> at no cost or obligation. Call anytime 24 hours a day to<br><a href="tel:844‐311‐5109"><b>✆ 844‐311‐5109 </a>and enter the ID#</b><br>of the information that you would like to receive.
           rightSec2Header2: BUYERS
           rightSec2Content: <ol type='1'>  
                 <li><b>SAVE THOUSANDS </b>- Find out how you can save
-              thousands of dollars when you buy a home... <a href="1‐844‐311‐5109,,,5014"><b>ID# 5014</b></a></li>
+              thousands of dollars when you buy a home... <a href="tel:844‐311‐5109,,,5014"><b>ID# 5014</b></a></li>
                 <li><b>STOP PAYING RENT </b>- Learn how to buy your first
-              home for as little as renting... <a href="1‐844‐311‐5109,,,5001"><b>ID# 5001</b></a><br></li>
+              home for as little as renting... <a href="tel:844‐311‐5109,,,5001"><b>ID# 5001</b></a><br></li>
                 <li><b>FIXER UPPER HOMES </b>- Receive a FREE hotlist of
               the most current bargain homes that are priced below
-              market because they need work ... <a href="1‐844‐311‐5109,,,5048"><b>ID# 5048</b></a></li>
+              market because they need work ... <a href="tel:844‐311‐5109,,,5048"><b>ID# 5048</b></a></li>
                 <li><b>10 BEST BUYS HOT LIST </b>- Receive a FREE hotlist of
               the most current Best Buys in your desired location and
-              price range ... <a href="1‐844‐311‐5109,,,5040"><b>ID# 5040</b></a></li>
+              price range ... <a href="tel:844‐311‐5109,,,5040"><b>ID# 5040</b></a></li>
                 <li><b>9 BUYER TRAPS </b>- How to avoid these common traps
-              that could cost you the home of your dreams... <a href="1‐844‐311‐5109,,,5018"><b>ID# 5018</b></a></li>
+              that could cost you the home of your dreams... <a href="tel:844‐311‐5109,,,5018"><b>ID# 5018</b></a></li>
               </ol>
           rightSec2Header3: SELLERS
           rightSec2Content2: <ol type='1'>
               <li><b>11 HOME INSPECTION PITFALLS </b>- Learn about
-              these common and costly traps BEFORE you list... <a href="1‐844‐311‐5109,,,5003"><b>ID# 5003</b></a></li>
+              these common and costly traps BEFORE you list... <a href="tel:844‐311‐5109,,,5003"><b>ID# 5003</b></a></li>
               <li><b>COSTLY HOMESELLER MISTAKES </b>- Learn how to avoid these common mistakes and save yourself
               thousands of dollars when you sell your home.<br>
-              <a href="1‐844‐311‐5109,,,5000"><b>ID# 5000</b></a></li>
+              <a href="tel:844‐311‐5109,,,5000"><b>ID# 5000</b></a></li>
               <li><b>HOW TO SELL YOUR HOME WITHOUT AN
-              AGENT... <a href="1‐844‐311‐5109,,,5017"><b>ID# 5017</b></a></li>
+              AGENT... <a href="tel:844‐311‐5109,,,5017"><b>ID# 5017</b></a></li>
               <li><b>FIND OUT WHAT AREA HOMES ARE SELLING</b>
               FOR - Receive a Free hotlist of recent homesales and
-              current listings...<a href="1‐844‐311‐5109,,,5041"><b>ID# 5041</b></a></li>
+              current listings...<a href="tel:844‐311‐5109,,,5041"><b>ID# 5041</b></a></li>
               <li><b>27 QUICK & EASY FIXUPS </b>- Learn how to sell your
-              home fast and for top dollar... <a href="1‐844‐311‐5109,,,5023"><b>ID# 5023</b></a></li>
+              home fast and for top dollar... <a href="tel:844‐311‐5109,,,5023"><b>ID# 5023</b></a></li>
             </ol>
     page2Footer:
       page2FooterText: "Consumer information provided courtesy of Praveen Kumar, CA BRE Lic#: 01928307"
