--- a/userInput/2024-mw/mw-202403-web/userData/data.yaml
+++ b/userInput/2024-mw/mw-202403-web/userData/data.yaml
@@ -28,7 +28,7 @@ a4parent:
         leftSec1Text: |
           <p>Buying a home is a significant investment, no matter which way you look at it. But for many homebuyers, it’s an even more expensive process than it needs to be because many fall prey to at least a few of the many common and costly mistakes trap them in either paying too much for the home they want, or losing their dream home to another buyer or, worse, buying the wrong home for their needs.</p>
           <p>A systemized approach to the homebuying process can help you steer clear of these common traps, allowing you to not only cut costs, but also buy the home that’s best for you. An industry report has just been released entitled “9 Buyer Traps and How to Avoid Them”. This important report discusses the nine most common and costly of this homebuyer traps, how to identify them, and what you can do to avoid them.</p>
-          <p><b>To hear a brief recorded message about how to order your FREE copy of this report, call toll-free<a href="844‐311‐5109,,,5018"> ✆ 844‐311‐5109 and enter 5018</a>. You can call any time, 24 hours a day, 7 days a week.</b></p>
+          <p><b>To hear a brief recorded message about how to order your FREE copy of this report, call toll-free<a href="tel:844‐311‐5109,,,5018"> ✆ 844‐311‐5109 and enter 5018</a>. You can call any time, 24 hours a day, 7 days a week.</b></p>
           <p>Get your free special report NOW to learn how to avoid costly buyer mistakes before you purchase your next home.</p>
         sectionLeft2:  
           leftSec2Header: FREE HOMESELLER'S MARKETING CHECKLIST
