--- a/templateInput/hb-gen-web/templateData/template.yaml
+++ b/templateInput/hb-gen-web/templateData/template.yaml
@@ -31,11 +31,13 @@ a4parent:
           children:
             page1HeaderImage:
               type: img
-              className: image
+              className: page1HeaderImage
               css:
-                width: 100%
                 height: 6.25rem
                 margin: 0 0.5rem
+                backgroundPosition: center center
+                backgroundSize: cover
+                backgroundRepeat: no-repeat
             page1HeaderText:
               type: text
               css:
@@ -320,6 +322,7 @@ a4parent:
                       children:
                         text1:
                           type: text
+                          className: text1
                           css:
                             fontSize: 3rem
                             fontWeight: 900
@@ -735,11 +738,14 @@ a4parent:
                     fontWeight: 600
                 page4BottomHeaderImage:
                   type: img
-                  className: image
+                  className: page4BottomHeaderImage
                   css:
                     width: 7.5rem
                     height: 6.8rem
                     marginTop: -4.5rem
+                    backgroundPosition: center center
+                    backgroundSize: cover
+                    backgroundRepeat: no-repeat
             page4BottomBody:
               type: text
               css:
